force-app/main/default/objects/Historical_PLMA__c/Historical_PLMA__c.object-meta.xml
<CustomObject>
    <label>Historical PLMA</label>
    <nameField>
        <displayFormat>PLMA-{0000}</displayFormat>
        <label>Historical PLMA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical PLMAS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>