force-app/main/default/objects/Historical_PLMA__c/fields/Admin_Id__c.field-meta.xml
<CustomField>
    <fullName>Admin_Id__c</fullName>
    <label>Admin Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>