force-app/main/default/objects/Historical_PLMA__c/fields/B2B_Custom_Exception__c.field-meta.xml
<CustomField>
    <fullName>B2B_Custom_Exception__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Custom Exception</label>
    <referenceTo>B2B_Custom_Exception__c</referenceTo>
    <relationshipLabel>Historical PLMAS</relationshipLabel>
    <relationshipName>Historical_PLMAS</relationshipName>
    <type>Lookup</type>
</CustomField>