force-app/main/default/objects/Historical_PLMA__c/fields/Cert_Date__c.field-meta.xml
<CustomField>
    <fullName>Cert_Date__c</fullName>
    <label>Cert Date</label>
    <type>Date</type>
</CustomField>