force-app/main/default/objects/Historical_PLMA__c/fields/Cert_Status__c.field-meta.xml
<CustomField>
    <fullName>Cert_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cert Status</label>
    <type>Checkbox</type>
</CustomField>