force-app/main/default/objects/Historical_PLMA__c/fields/Data_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Status__c</fullName>
    <label>Data Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>