force-app/main/default/objects/Historical_PLMA__c/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <label>Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VPC-ER</fullName>
            </value>
            <value>
                <fullName>VPC-GP</fullName>
            </value>
            <value>
                <fullName>VPC-HC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>