force-app/main/default/objects/Historical_PLMA__c/fields/PLMA_Status__c.field-meta.xml
<CustomField>
    <fullName>PLMA_Status__c</fullName>
    <formula>CASE(
TEXT(Status__c),
 &apos;active&apos;, &apos;Active&apos;, 
&apos;expired&apos;,&apos;Complete&apos;,
&apos;cancelled&apos;,&apos;Voided&apos;,
TEXT(Status__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLMA Status</label>
    <type>Text</type>
</CustomField>